--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -29,9 +29,10 @@
   right: 0;
 
   display: block;
-  width: 21px;
-  height: 20px;
-  padding-top: 40px;
+  width: 1px;
+  height: 1px;
+
+  padding-top: 39px;
   padding-right: 41px;
   padding-bottom: 39px;
   padding-left: 41px;
@@ -50,6 +51,10 @@
 
 .navigation__logo-toggle--open {
   background-image: url("../img/icon-menu-open.svg");
+}
+
+.navigation--nojs .navigation__logo-toggle {
+  display: none;
 }
 
 // Обертки списков навигации
@@ -125,6 +130,14 @@
 
 .navigation__delivery {
   display: none;
+}
+
+// ---------- MOBILE MENU ----------
+@media (max-width: $mobile-width-only) {
+  .navigation--closed .navigation__wrapper-top,
+  .navigation--closed .navigation__wrapper-interactive {
+    display: none;
+  }
 }
 
 // ---------- TABLET ----------
