Небольшая защита от переполнения в блоках hero и social

--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -38,7 +38,6 @@
   line-height: 30px;
   font-weight: bold;
   text-align: center;
-
   color: #000000;
 }
 
@@ -172,6 +171,7 @@
     @include layout-padding($tablet-padding);
 
     display: flex;
+    flex-wrap: wrap;
   }
 
   .hero__item {
@@ -249,8 +249,8 @@
 
     &:hover,
     &:focus {
-      margin-top: -5px;
       min-height: 122px;
+      margin-top: -5px;
     }
   }
 }
