--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -2,6 +2,7 @@
   @include list-style-clean;
 
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   width: 260px;
