--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -72,6 +72,7 @@
 // Карта
 
 .contacts__map {
+  position: relative;
   margin-bottom: 42px;
 }
 
@@ -95,6 +96,17 @@
   background-image: url("../img/icon-map-pin.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
+}
+
+// Яндекс карта
+
+.contacts__map-yandex {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 454px;
 }
 
 // Кнопка
@@ -182,6 +194,12 @@
     left: 363px;
   }
 
+  // Яндекс карта
+
+  .contacts__map-yandex {
+    height: 457px;
+  }
+
   // Кнопка
 
   .contacts__write-us {
@@ -258,6 +276,13 @@
   .contacts__map-picture::after {
     top: 147px;
     left: 238px;
+  }
+
+  // Яндекс карта
+
+  .contacts__map-yandex {
+    width: 525px;
+    height: 454px;
   }
 
   // Кнопка
