--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -7,6 +7,17 @@
 // ---------- TABLE ----------
 
 @media (min-width: $tablet-width) {
+  .header {
+    background-color: #f9f9f9;
+    background-image: linear-gradient(#ffffff 87px, transparent 87px);
+    background-repeat: no-repeat;
+    background-position: 0 0;
+  }
+
+  .header--inner {
+    background-color: #f1f1f1;
+  }
+
   .header::after {
     content: "";
     position: absolute;
