--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -253,7 +253,9 @@
     max-width: 320px;
     margin-right: 50px;
     margin-left: auto;
-    padding-top: 15px;
+    padding-top: 17px;
+
+    line-height: 24px;
   }
 }
 
