--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -10,7 +10,7 @@
   @include layout-padding($mobile-padding);
   @include center(340);
 
-  padding-top: 35px;
+  padding-top: 33px;
   padding-bottom: 7px;
 }
 
@@ -24,6 +24,8 @@
   font-size: 18px;
   font-weight: bold;
   color: $primary-text;
+
+  transform: translateX(-2px);
 }
 
 // Контактные данные
@@ -73,6 +75,7 @@
 
 .contacts__map {
   position: relative;
+
   margin-bottom: 42px;
 }
 
@@ -106,7 +109,7 @@
   left: 0;
 
   width: 100%;
-  height: 454px;
+  height: 456px;
 }
 
 // Кнопка
@@ -143,16 +146,17 @@
     position: relative;
 
     margin-bottom: 49px;
-    margin-left: -5px;
 
     font-size: 43px;
     line-height: 50px;
+
+    transform: translateX(-5px);
 
     &::after {
       content: "";
       position: absolute;
       top: -15px;
-      right: 3px;
+      right: -2px;
 
       width: 47px;
       height: 81px;
@@ -176,7 +180,7 @@
   }
 
   .contacts__section-value {
-    margin-left: 23px;
+    margin-left: 24px;
   }
 
   // Карта
@@ -236,7 +240,6 @@
 
   .contacts__title {
     margin-bottom: 49px;
-    margin-left: -5px;
 
     font-size: 53px;
     line-height: 57px;
