--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -31,6 +31,8 @@
   @include title;
 
   margin-bottom: 24px;
+
+  transform: translateX(-2px);
 }
 
 // Текст отзыва
@@ -83,7 +85,7 @@
 
   background-color: transparent;
   background-repeat: no-repeat;
-  background-position: 50% 50%;
+  background-position: 48% 50%;
   border: 1px solid #ececec;
   cursor: pointer;
 }
@@ -100,7 +102,7 @@
   border-right: none;
 }
 
-// ---------- DESKTOP ----------
+// ---------- TABLET ----------
 
 @media (min-width: $tablet-width) {
   // Фон блока
@@ -138,7 +140,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding-top: 77px;
+    padding-top: 78px;
     padding-bottom: 85px;
   }
 
@@ -149,11 +151,12 @@
 
     flex-grow: 1;
     order: 1;
-    margin-bottom: 49px;
-    margin-left: -5px;
+    margin-bottom: 48px;
 
     font-size: 43px;
     line-height: 50px;
+
+    transform: translateX(-5px);
   }
 
   // Текст отзыва
@@ -176,6 +179,7 @@
     margin-bottom: 4px;
 
     font-size: 18px;
+    letter-spacing: -0.5px;
   }
 
   .reviews__author-link {
@@ -200,6 +204,7 @@
     width: 88px;
     height: 55px;
 
+    background-position: 53% 54%;
     border: none;
 
     &:hover,
