--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,7 +1,7 @@
 // Отступ снизу
 
 .form {
-  padding-bottom: 55px;
+  padding-bottom: 57px;
 }
 
 // Филдсеты
@@ -88,7 +88,7 @@
 .form__legend::before {
   content: "";
   position: absolute;
-  top: 7px;
+  top: 8px;
   left: 62px;
 
   width: calc(100% - 62px);
@@ -130,6 +130,8 @@
   color: $primary-text;
 
   cursor: pointer;
+
+  user-select: none;
 
   &::before {
     content: "";
@@ -233,7 +235,7 @@
 
   width: 100%;
   height: 47px; // IE fix
-  padding-top: 11px;
+  padding-top: 9px;
   padding-right: 40px;
   padding-bottom: 16px;
 
@@ -575,7 +577,7 @@
   // Отступ снизу
 
   .form {
-    padding-bottom: 51px;
+    padding-bottom: 50px;
   }
 
   // Филдсеты
