--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -2,6 +2,7 @@
   font-family: "Open Sans";
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 
   src: local("Open Sans Regular"), local("OpenSans-Regular"), url("../fonts/opensans.woff") format("woff"), url("../fonts/opensans.woff2") format("woff2");
 }
@@ -10,6 +11,7 @@
   font-family: "Open Sans";
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 
   src: local("Open Sans Bold"), local("OpenSans-Bold"), url("../fonts/opensansbold.woff") format("woff"), url("../fonts/opensansbold.woff2") format("woff2");
 }
