--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -240,6 +240,7 @@
   }
 
   .navigation__icon--cart {
+    flex-shrink: 0;
     margin-right: 30px;
   }
 
@@ -320,12 +321,8 @@
 
   // Списки навигационных элементов и их элементы
 
-  .navigation__list {
-    height: 100%;
-  }
-
   .navigation__list--top {
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     width: auto;
   }
 
@@ -339,21 +336,18 @@
   .navigation__item {
     display: flex;
     align-items: center;
-    height: 100%;
+    height: 88px;
 
     border-bottom: none;
   }
 
-  .navigation__item--top:first-child {
-    flex-shrink: 0;
-    width: 184px;
-    padding-right: 35px;
+  .navigation__item--top {
+    min-width: 184px;
+    padding-right: 10px;
   }
 
   .navigation__item--top:not(:first-child) {
     @include border(left);
-
-    padding-right: 10px;
     padding-left: 35px;
   }
 
