--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -117,6 +117,8 @@
 .contacts__write-us {
   width: 260px;
   margin: 0 auto;
+
+  font-size: 18px;
 }
 
 // ---------- TABLET ----------
@@ -208,6 +210,8 @@
 
   .contacts__write-us {
     width: 231px;
+
+    font-size: 17px;
   }
 }
 
