Изменил стили navigation__link, убрал состоянии для пунктов меню при нахождении на соответствующей странице

--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -82,7 +82,9 @@
   line-height: 24px;
   font-weight: bold;
   color: $primary-text;
+}
 
+.navigation__link[href] {
   &:hover,
   &:focus {
     color: rgba($color: $primary-text, $alpha: 0.6);
