--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -4,7 +4,7 @@
   font-style: normal;
   font-display: swap;
 
-  src: local("Open Sans Regular"), local("OpenSans-Regular"), url("../fonts/opensans.woff") format("woff"), url("../fonts/opensans.woff2") format("woff2");
+  src: local("Open Sans Regular"), local("OpenSans-Regular"), url("../fonts/opensans.woff2") format("woff2"), url("../fonts/opensans.woff") format("woff");
 }
 
 @font-face {
@@ -13,5 +13,5 @@
   font-style: normal;
   font-display: swap;
 
-  src: local("Open Sans Bold"), local("OpenSans-Bold"), url("../fonts/opensansbold.woff") format("woff"), url("../fonts/opensansbold.woff2") format("woff2");
+  src: local("Open Sans Bold"), local("OpenSans-Bold"), url("../fonts/opensansbold.woff2") format("woff2"), url("../fonts/opensansbold.woff") format("woff");
 }
