--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -99,6 +99,7 @@
 // Иконка кнопки
 
 .product__order-icon {
+  transform: translateY(-5px);
   opacity: 0.2;
 }
 
@@ -181,12 +182,6 @@
 
   .product__price {
     font-size: 17px;
-  }
-
-  // Иконка кнопки
-
-  .product__order {
-    margin-bottom: 4px;
   }
 }
 
