Исправил развал меню при 1133-1150px и блоке navigation

--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -331,7 +331,7 @@
 
   .navigation__list--top {
     flex-wrap: wrap;
-    width: auto;
+    width: 395px;
   }
 
   .navigation__list--promo {
@@ -349,14 +349,14 @@
   }
 
   .navigation__item--top {
-    width: 184px;
+    width: 46.58%;
     padding-right: 10px;
   }
 
   .navigation__item--top:not(:first-child) {
     @include border(left);
 
-    width: 211px;
+    width: 53.42%;
     padding-left: 35px;
   }
 
